[gd_scene load_steps=8 format=3 uid="uid://436pdseggaxu"]

[ext_resource type="Script" uid="uid://c8kd2e2post2u" path="res://scenes/Roll Artifact/roll_artifact.gd" id="1_jv2pg"]
[ext_resource type="AudioStream" uid="uid://dr842di8bh5p2" path="res://_ Assets/sfx/Ethereal Swell.mp3" id="2_1xv5q"]
[ext_resource type="Texture2D" uid="uid://dxk44sasa0wxs" path="res://_ Assets/GFX/UI books & more.png" id="2_801vy"]
[ext_resource type="FontFile" uid="uid://bhsrjpc302k7w" path="res://_ Assets/Clarity.ttf" id="3_2cwxd"]

[sub_resource type="Animation" id="Animation_hmlxm"]
resource_name = "slide"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(3.73, 2.21, 1),
"update": 0,
"values": [Vector2(740, 1180), Vector2(740, 770), Vector2(740, 790)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_baonu"]
_data = {
&"slide": SubResource("Animation_hmlxm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adi42"]
bg_color = Color(0, 0, 0, 0.509804)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 0.509804)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[node name="rollArtifact" type="Node2D"]
position = Vector2(0, -11.7785)
script = ExtResource("1_jv2pg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1xv5q")
autoplay = true
max_polyphony = 2
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
autoplay = true
max_polyphony = 2
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_baonu")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 740.0
offset_top = 1180.0
offset_right = 740.0
offset_bottom = 1180.0
scale = Vector2(2, 2)

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_top = 143.0
offset_right = 143.0
offset_bottom = 393.0
rotation = 4.71239
texture = ExtResource("2_801vy")
region_rect = Rect2(561, 17, 46, 62)

[node name="YesPanel" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Name" type="Label" parent="Control/YesPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 475.0
offset_bottom = 68.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_2cwxd")
theme_override_font_sizes/font_size = 40
text = "ARTIFACT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Control/YesPanel"]
layout_mode = 0
offset_left = 80.0
offset_top = 47.0
offset_right = 404.0
offset_bottom = 171.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.901961, 0.901961, 0.901961, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_2cwxd")
theme_override_font_sizes/font_size = 20
text = "   A huge canvas banner proudly displaying a long forgotten standard."
autowrap_mode = 3

[node name="ArtifactSprite Panel" type="PanelContainer" parent="Control/YesPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 52.0
offset_right = 89.0
offset_bottom = 116.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_adi42")

[node name="ArtifactSprite" type="Sprite2D" parent="Control/YesPanel/ArtifactSprite Panel"]
texture_filter = 1
position = Vector2(32, 32)
scale = Vector2(0.12, 0.12)

[node name="NoPanel" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Description" type="Label" parent="Control/NoPanel"]
texture_filter = 1
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 240.0
offset_bottom = 131.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.901961, 0.901961, 0.901961, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_2cwxd")
theme_override_font_sizes/font_size = 12
text = "You follow the map, but after several days of searching you still are not able to locate an artifact!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
